[project]
name = "aws-direct-connect-monitor"
version = "1.0.0"
description = "MCP server for near real-time monitoring of AWS Direct Connect connections, virtual interfaces, BGP health, and generating interactive dashboards with connectivity icons"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
]

[project.scripts]
"aws-direct-connect-monitor" = "aws_direct_connect_monitor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
